--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ font-family: 'Ruslan Display', cursive; */
     margin: 0px;
     padding: 0px;
 }
-
+/* background color  */
 body {
     color: #c4ac7e;
     background-color: #2e2e30;
@@ -20,7 +20,7 @@ a {
     margin: 0 50px 0 50px; /* Top right bottom left */
     font-size: 30px;
 }
-
+/* h1 tag is in header tag */
 h1 {
     text-align: center;
     text-shadow: 5px 5px black;
